tests/todo/syntax_error_within_line.expected
Syntax error: Expected 'number'
   1 | var a = &;
     |          ^
